--- a/src/nextnav.css
+++ b/src/nextnav.css
@@ -25,7 +25,7 @@ body {
 .article__container
 {
     width: 800px;
-    height: 400px;
+    height: 450px;
     border: 1px white solid;
     box-shadow: 5 5 10px black;
     background-color: white;
@@ -38,6 +38,30 @@ body {
    position: relative;
    border-radius: 50%;
    
+}
+
+.quote
+{
+    position:absolute;
+    top:37px;
+    left:315px;
+    
+    background-color:rgb(18, 146, 231);
+    color: white;
+    border-radius: 50%;
+    border-width: 30px;
+    padding-top: 10px;
+    
+    text-align: center;
+}
+i{
+   
+  
+    width: 40px;
+    height: 40px;
+    background-color:rgb(18, 146, 231);
+
+    
 }
 
 .review__image
@@ -86,7 +110,7 @@ body {
 .prev__Button
 {
     margin-top: 20px;
-    margin-left: 350px;
+    margin-left: 360px;
     color: green;
     border: none;
     background-color: white;
@@ -104,7 +128,31 @@ body {
     font-size: 30px;
 }
 
+.surprise__button
+{
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-top: 10px;
+    padding: 3px 6px;
+    color: rgb(18, 146, 231);
+    background-color: rgb(186, 238, 241);
+    border: none;
+    border-radius: 3px;
 
+}
+.surprise__button:hover
+{
+    cursor: pointer;
+    background-color: rgb(0, 182, 237);
+    color: black;
+}
+
+.article__container {
+    position: relative;
+    overflow: hidden;
+    
+}
 
 
 
